Add sync result function.

--- a/SunSync/SunSync/SyncProgressPage.xaml
+++ b/SunSync/SunSync/SyncProgressPage.xaml
@@ -7,8 +7,7 @@
       d:DesignHeight="560" d:DesignWidth="680"
 	Title="SyncProgressPage">
     <Page.Resources>
-    <SolidColorBrush x:Key="RedGridLine" Color="Gray" />
-    <SolidColorBrush x:Key="BlueGridLine" Color="Gray"/>
+    <SolidColorBrush x:Key="GrayGridLine" Color="Gray" />
     </Page.Resources>
     
     <Grid>
@@ -25,18 +24,18 @@
         <StackPanel Grid.Row="1">
             <DataGrid Height="380" Name="UploadProgressDataGrid" ItemsSource="{Binding}" 
                       AutoGenerateColumns="false" IsReadOnly="True"
-                       VerticalGridLinesBrush="{StaticResource RedGridLine}"
-                       HorizontalGridLinesBrush="{StaticResource BlueGridLine}"
+                       VerticalGridLinesBrush="{StaticResource GrayGridLine}"
+                       HorizontalGridLinesBrush="{StaticResource GrayGridLine}"
                      >
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="本地文件名" Binding="{Binding LocalPath}" Width="235"></DataGridTextColumn>
-                    <DataGridTextColumn Header="空间文件名" Binding="{Binding FileKey}" Width="235"></DataGridTextColumn>
+                    <DataGridTextColumn Header="本地文件名" Binding="{Binding LocalPath}" Width="320"></DataGridTextColumn>
+                    <DataGridTextColumn Header="空间文件名" Binding="{Binding FileKey}" Width="240"></DataGridTextColumn>
                     <DataGridTextColumn Header="上传进度" Binding="{Binding Progress}" Width="100"></DataGridTextColumn>
-                    <DataGridTextColumn Header="上传速度" Binding="{Binding Speed}" Width="100"></DataGridTextColumn>
                 </DataGrid.Columns>
             </DataGrid>
-            <StackPanel Height="40" HorizontalAlignment="Center">
-                <TextBlock Name="UploadProgressTextBlock" FontSize="16" VerticalAlignment="Center" Margin="10"></TextBlock>
+            <StackPanel Height="40" HorizontalAlignment="Center" Orientation="Horizontal">
+                <TextBlock Name="UploadProgressTextBlock" FontSize="16" 
+                           VerticalAlignment="Center" Margin="10" Text=""></TextBlock>
             </StackPanel>
             <StackPanel Margin="0 10">
                 <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
