--- a/SunSync/SunSync/App.xaml
+++ b/SunSync/SunSync/App.xaml
@@ -3,6 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <ControlTemplate x:Key="jobListItemTempl" TargetType="ListBoxItem">
+            <StackPanel Orientation="Vertical" Margin="5">
+                <StackPanel>
+                    <TextBlock Text="{Binding Path=SyncLocalDir}" FontSize="16" Foreground="Brown"></TextBlock>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0 5">
+                    <TextBlock Text="{Binding Path=SyncTargetBucket}" FontSize="14" Foreground="SeaGreen"></TextBlock>
+                    <TextBlock Text="{Binding Path=SyncDateTimeStr}" FontSize="14" Margin="10 0" FontStyle="Italic"></TextBlock>
+                </StackPanel>
+            </StackPanel>
+        </ControlTemplate>
          
     </Application.Resources>
 </Application>
