--- a/SunSync/SunSync/SyncProgressPage.xaml
+++ b/SunSync/SunSync/SyncProgressPage.xaml
@@ -39,8 +39,8 @@
             </StackPanel>
             <StackPanel Margin="0 10">
                 <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                <Button Content="暂停" Width="120" Height="32" Margin="10 0"></Button>
-                <Button Content="结束" Width="120" Height="32" Margin="10 0"></Button>
+                <Button Content="暂停" FontSize="16" Width="120" Height="32" Margin="10 0" Click="UploadActionButton_EventHandler" x:Name="UploadActionButton"></Button>
+                <Button Content="结束" FontSize="16" Width="120" Height="32" Margin="10 0" Click="ManualFinishButton_EventHandler" x:Name="ManualFinishButton"></Button>
                 </StackPanel>
             </StackPanel>
         </StackPanel>
