--- a/SunSync/SunSync/MainWindow.xaml
+++ b/SunSync/SunSync/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SunSync.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="七牛云数据同步" Width="700" Height="600" Loaded="MainWindow_Loaded_EventHandler" WindowStartupLocation="CenterScreen" 
+        Title="QSunSync 七牛云数据同步" Width="700" Height="600" Loaded="MainWindow_Loaded_EventHandler" WindowStartupLocation="CenterScreen" 
         ResizeMode="CanMinimize" Icon="sunsync.ico">
     
     <Grid>
