--- a/SunSync/SunSync/SyncProgressPage.xaml
+++ b/SunSync/SunSync/SyncProgressPage.xaml
@@ -33,8 +33,8 @@
                     <DataGridTextColumn Header="上传进度" Binding="{Binding Progress}" Width="100"></DataGridTextColumn>
                 </DataGrid.Columns>
             </DataGrid>
-            <StackPanel Height="40">
-                <TextBlock Name="UploadProgressLogTextBlock" Margin="10 5" Height="40" FontSize="14" Text="###" TextWrapping="WrapWithOverflow">
+            <StackPanel Height="50">
+                <TextBlock Name="UploadProgressLogTextBlock" Margin="5" Height="40" FontSize="14" Text="###" TextWrapping="WrapWithOverflow">
                     
                 </TextBlock>
             </StackPanel>
