--- a/SunSync/SunSync/MainWindow.xaml
+++ b/SunSync/SunSync/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="QSunSync 七牛云文件同步工具" Width="700" Height="600" Loaded="MainWindow_Loaded_EventHandler" WindowStartupLocation="CenterScreen" 
-        ResizeMode="CanMinimize" Icon="sunsync.ico" Closing="MainWindow_Closing_EventHandler" >
+        ResizeMode="CanMinimize" Icon="Pictures/sunsync.ico" Closing="MainWindow_Closing_EventHandler" >
     
     <Grid>
         <DockPanel>
