--- a/SunSync/SunSync/QuickStartPage.xaml
+++ b/SunSync/SunSync/QuickStartPage.xaml
@@ -13,44 +13,43 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
-            <Image Source="Pictures/sun_logo.jpg" Height="100" 
-                   MouseLeftButtonUp="ChangeTopBgImage_EventHandler" Name="TopLogoImage" Margin="0"></Image>
+            <Image Source="Pictures/qiniu_logo.jpg" Height="100" 
+                   MouseLeftButtonUp="ChangeTopBgImage_EventHandler" Name="TopLogoImage" Margin="0" VerticalAlignment="Top"></Image>
         </StackPanel>
-        <Grid Grid.Row="2">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="400"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="0" Orientation="Vertical">
-            <StackPanel Margin="20 5">
-                    <Label Content="最近同步任务" FontSize="24" Margin="0 10"></Label>
-                    <ListBox Name="SyncHistoryListBox" Height="380" >
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="400"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" Orientation="Vertical">
+                <StackPanel Margin="20 0">
+                        <Label Content="最近同步任务" FontSize="24" Margin="0 10"></Label>
+                        <ListBox Name="SyncHistoryListBox" Height="380" >
                        
-                    </ListBox>
-                </StackPanel>
-        </StackPanel>
-        <StackPanel Grid.Column="1" Orientation="Vertical">
-            <StackPanel Margin="20 5">
-               <Label Content="快速开始" FontSize="24" Margin="0 10"></Label>
-               <TextBlock TextDecorations="Underline" 
-                          Text="新建同步任务" Margin="0"
-                          FontSize="16"
-                          Foreground="MediumBlue"
-                          Cursor="Hand"
-                          MouseLeftButtonUp="CreateNewSyncJob_EventHandler"
-                          Name="CreateNewTask_TextBlock"
-                          ></TextBlock>
-               <TextBlock TextDecorations="Underline" 
-                          Text="帐号设置" Margin="0 10"
-                          FontSize="16"
-                          Foreground="MediumBlue"
-                          MouseLeftButtonUp="SetAccount_EventHandler"
-                          Cursor="Hand"
-                          ></TextBlock>
-                   
-                </StackPanel>
+                        </ListBox>
+                    </StackPanel>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Orientation="Vertical">
+                <StackPanel Margin="20 0">
+                    <Label Content="快速开始" FontSize="24" Margin="0 10"></Label>
+                    <TextBlock TextDecorations="Underline" 
+                              Text="新建同步任务" Margin="0"
+                              FontSize="16"
+                              Foreground="MediumBlue"
+                              Cursor="Hand"
+                              MouseLeftButtonUp="CreateNewSyncJob_EventHandler"
+                              Name="CreateNewTask_TextBlock"
+                              ></TextBlock>
+                    <TextBlock TextDecorations="Underline" 
+                              Text="帐号设置" Margin="0 10"
+                              FontSize="16"
+                              Foreground="MediumBlue"
+                              MouseLeftButtonUp="SetAccount_EventHandler"
+                              Cursor="Hand"
+                              ></TextBlock>
 
-        </StackPanel>
+                </StackPanel>
+            </StackPanel>
         </Grid>
     </Grid>
 </Page>
