1. Decrease the hash calculation work locally, use qiniu hash. 2. Add check new files option to make this tool more friendly under circumstance of the big amount of files upload 3. Use temp files to tackle the case of halt of listing directory

--- a/SunSync/SunSync/SyncProgressPage.xaml
+++ b/SunSync/SunSync/SyncProgressPage.xaml
@@ -44,7 +44,7 @@
             </StackPanel>
             <StackPanel Margin="5">
                 <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                <Button Content="暂停" FontSize="14" Width="120" Height="32" Margin="10 0" Click="UploadActionButton_EventHandler" x:Name="UploadActionButton"></Button>
+                <Button Content="停止" FontSize="14" Width="120" Height="32" Margin="10 0" Click="HaltActionButton_EventHandler" x:Name="HaltActionButton"></Button>
                 <Button Content="结束" FontSize="14" Width="120" Height="32" Margin="10 0" Click="ManualFinishButton_EventHandler" x:Name="ManualFinishButton"></Button>
                 </StackPanel>
             </StackPanel>
